# rbs_manus_xhand_teleop

./: .gitignore  README.md  pyproject.toml  run_mocap_core.py  setup.sh  teleop.py  test_project.py  train_xhand.py
assets/xhand_right/: xhand_right_nocol.urdf
checkpoints/: fk_model_xhand_right.pth
checkpoints/xhand_right_2026-04-09_01-20-23_xhand_v1/: config.json  last.pth
config/: xhand_right.json
scripts/: 01_collect_data.sh  02_train.sh  03_teleop.sh  prepare_xhand_urdf.py
src/: __init__.py  manus_bridge.py  retargeting.py  sapien_compat.py  xhand_controller.py  xhand_controller_local.py
